--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_BASE_URL=https://sharingfile.herokuapp.com/
+APP_BASE_URL=https://sharingfile.herokuapp.com
 MONGO_CONNECTION_URL="mongodb+srv://Filesharing:Filesharing@cluster0.5buk1.mongodb.net/<dbname>?retryWrites=true&w=majority"
 
 SMTP_HOST= smtp-relay.sendinblue.com
